# company-polify-AI-chat-app

./: .gitignore  README.md  app.py  company_policy.txt  pyproject.toml  rag_engine.py  requirements.txt
.chroma_db/: chroma.sqlite3
