[project]
name = "policy-rag-app"
version = "0.1.0"
description = "Company Policy AI Chat App using RAG with Google GenAI"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.45.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-chroma>=0.2.0",
    "chromadb>=0.6.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.1.0",
    "tiktoken>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []